--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.8",
-    "bundlr-browser-client": "github:acolytec3/bundlr-browser-client#2f89752f5918b64e1881b16cb10f676dfe2edf6a",
+    "arbundles": "file:../arbundles",
+    "bundlr-browser-client": "file:../browser-bundler",
     "ethers": "^5.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
