--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,9 +18,9 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.8",
-    "arbundles": "file:../arbundles",
-    "bundlr-browser-client": "file:../browser-bundler",
+    "bundlr-browser-client": "github:acolytec3/bundlr-browser-client#2890b4d423fc8146b0106ed5fe30fb1c86850d86",
     "ethers": "^5.5.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
