--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "Bundler Signer Demo App",
+  "name": "bundlr-demo-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.7.0",
@@ -18,7 +19,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/types": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.8",
-    "bundlr-browser-client": "github:acolytec3/bundlr-browser-client#2890b4d423fc8146b0106ed5fe30fb1c86850d86",
+    "bundlr-browser-client": "github:acolytec3/bundlr-browser-client#98b94c53f003ae1884af22e65630e7350812c927",
     "ethers": "^5.5.1",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +48,8 @@
     "not android <= 4.4.4",
     "not dead",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
